# langchain-document-QA-rag

./: .env.example  .gitignore  README.md  index.css  index.html  index.js  package.json  vite.config.js
scripts/: chunk_insert.py  pyproject.toml
utils/: retriever.js
