[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "loguru>=0.7.3",
    "openai>=1.64.0",
    "pypdf>=5.3.0",
    "supabase>=2.13.0",
    "tiktoken>=0.9.0",
]
